--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>React Application</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.css">
+    <link rel="stylesheet" href="./content/styles.css" type="text/css">
 </head>
 
 <body>
